--- a/shelter/style.css
+++ b/shelter/style.css
@@ -731,8 +731,9 @@ footer{
   .about-content{
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: 42px;
+    margin-top: 43px;
     width: calc(100vw - 20px);
+    height: 830px;
   }
   .about-inner-content{
     width: 100vw;
@@ -760,14 +761,59 @@ footer{
     margin-left: calc(100% - 280px);
   }
 
+  .pets{
+    padding: 42px 10px 42px 10px;
+  }
+  .pets-header{
+    width: calc(100vw - 20px);
+    min-width: 300px;
+    font-size: 25px;
+  }
+  .pets-card-container{
+    order: -5;
+    width: calc(100vw - 50px);
+    min-width: 270px;
+  }
+  .card{
+    width: calc(100vw - 50px);
+    min-width: 270px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .card-text{
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  .card-button{
+    padding-top: 5px;
+  }
+  .pets-slider{
+    margin-top: 42px;
+    flex-wrap: wrap;
+  }
+  .pets-slider-left-button{
+    margin-top: -40px;
+    margin-right: 66px;
+  }
+  .pets-slider-right-button{
+    margin-top: -40px;
+  }
+  .pets-main-button{
+    margin-top: 42px;
+    padding-top: 5px;
+  }
+
   .help-heading{
     width: calc(100vw - 90px);
-    margin-top: -42px;
+    min-width: 230px;
+    margin-top: -38px;
     margin-bottom: 40px;
     font-size: 25px;
   }
   .help-content{
     width: calc(100% - 30px);
+    min-width: 290px;
+    margin-bottom: 42px;
   }
   .list{
     column-gap: 30px;
@@ -775,7 +821,8 @@ footer{
     justify-content: space-between;
   }
   .list-item{
-    width: 130px;
+    width: calc(50vw - 30px);
+    min-width: 130px;
     height: 87px;
   }
   .list-img{
