--- a/shelter/style-our-pets.css
+++ b/shelter/style-our-pets.css
@@ -463,6 +463,7 @@ footer{
   }
   .main-content{
     width: calc(100vw - 20px);
+    min-width: 300px;
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -475,6 +476,7 @@ footer{
   .card{
     border-radius: 9px;
     width: calc(100vw - 50px);
+    min-width: 270px;
     margin-left: 0;
     margin-right: 0;
   }
