--- a/shelter/style.css
+++ b/shelter/style.css
@@ -167,6 +167,7 @@ button:hover{
   margin-top: -30px;
   width: 100vw;
   height: 100vh;
+  left: 0;
   background: rgba(41, 41, 41, 0.6);
   z-index: 1;
 }
@@ -348,6 +349,7 @@ button:hover{
   background-color: var(--color-light-s);
   border-radius: 9px;
   height: 435px;
+  display: none;
   margin-left: 45px;
   margin-right: 45px;
 }
@@ -589,6 +591,71 @@ footer{
   margin-right: 40px;
 }
 
+.popup{
+  position: fixed;
+  display: none;
+  width: 952px;
+  height: 552px;
+  left: calc(50% + 25px);
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 12;
+}
+.popup-button{
+  position: fixed;
+  top: 0;
+  right: 10px;
+  border-radius: 100px;
+  height: 52px;
+  width: 52px;
+  background-color: transparent;
+  border: var(--color-primary) solid 2px;
+}
+.popup-button-cross{
+  padding-top: 4px;
+}
+.popup-card{
+  position: relative;
+  background-color: var(--color-light-xl);
+  width: 900px;
+  height: 500px;
+  top: 52px;
+  display: flex;
+  border: none;
+  border-radius: 9px;
+}
+.popup-img{
+  width: 500px;
+  height: 500px;
+  border: none;
+  border-radius: 9px;
+}
+.popup-content{
+  margin: 50px 20px 88px 29px;
+}
+.popup-subtitle{
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+.popup-description{
+  line-height: 114%;
+}
+.popup-stat::marker{
+  color: var(--color-primary);
+}
+.popup-stats{
+  margin-top: 40px;
+}
+.popup-stat{
+  font-family: 'Georgia';
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  margin-bottom: 12px;
+  margin-left: -25px;
+}
+
 
 @media (max-width: 1279px){
   .header-title{
@@ -706,6 +773,40 @@ footer{
     margin-top: 60px;
     margin-left: 61%;
   }
+
+  .popup{
+    width: 682px;
+    height: 402px;
+    left: calc(50% + 25px);
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 12;
+  }
+  .popup-card{
+    width: 630px;
+    height: 350px;
+  }
+  .popup-img{
+    width: 350px;
+    height: 350px;
+  }
+  .popup-content{
+    margin: 10px 5px 37px 11px;
+  }
+  .popup-subtitle{
+    margin-bottom: 20px;
+  }
+  .popup-description{
+    font-size: 13px;
+    line-height: 110%;
+  }
+  .popup-stats{
+    margin-top: 17px;
+  }
+  .popup-stat{
+    margin-bottom: 7px;
+  }
+
 }
 @media (max-width: 767px){
   
@@ -1014,6 +1115,42 @@ footer{
     margin-top: 30px;
     margin-left: calc(30% - 64px);
     width: 260px;
+  }
+
+
+  .popup{
+    width: 270px;
+    height: 393px;
+    left: calc(50% + 15px);
+  }
+  .popup-button{
+    right: 0px;
+  }
+  .popup-card{
+    width: 240px;
+    height: 341px;
+  }
+  .popup-img{
+    display: none;
+  }
+  .popup-content{
+    margin: 10px;
+  }
+  .popup-title{
+    text-align: center;
+  }
+  .popup-subtitle{
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .popup-description{
+    text-align: justify;
+  }
+  .popup-stats{
+    margin-top: 24px;
+  }
+  .popup-stat{
+    margin-bottom: 5px;
   }
 }
 @media (max-width: 319px){
