--- a/shelter/style.css
+++ b/shelter/style.css
@@ -94,6 +94,7 @@ button:hover{
   background-color: var(--color-primary-light);
   border: none;
 }
+
 .header{
   width: 100%;
   height: 90px;
@@ -321,6 +322,36 @@ button:hover{
   width: 14px;
   padding-bottom: 2px;
 }
+
+.pets-card-container{
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 60px;
+  max-width: 100%;
+}
+.card{
+  background-color: var(--color-light-s);
+  border-radius: 9px;
+  height: 435px;
+  margin-left: 45px;
+  margin-right: 45px;
+  /* transform: translateX(300px); */
+  transition: all 1s;
+}
+.card-hidden{
+  display: none;
+}
+.card:hover{
+  box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
+  transition: box-shadow 0.2s;
+  cursor: pointer;
+}
+.card:hover .card-button{
+  background-color: var(--color-primary-light);
+  transition: background-color 0.2s;
+}
 .pets-slider-left-button{
   border-radius: 100px;
   height: 52px;
@@ -338,29 +369,6 @@ button:hover{
   margin-top: -60px;
   background-color: var(--color-light-l);
   border: var(--color-primary) solid 2px;
-}
-.pets-card-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 60px;
-}
-.card{
-  background-color: var(--color-light-s);
-  border-radius: 9px;
-  height: 435px;
-  display: none;
-  margin-left: 45px;
-  margin-right: 45px;
-}
-.card:hover{
-  box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
-  transition: box-shadow 0.2s;
-  cursor: pointer;
-}
-.card:hover .card-button{
-  background-color: var(--color-primary-light);
-  transition: background-color 0.2s;
 }
 .card-image{
   display: block;
