--- a/shelter/style.css
+++ b/shelter/style.css
@@ -94,7 +94,9 @@ button:hover{
   background-color: var(--color-primary-light);
   border: none;
 }
-
+.hide{
+  display: none;
+}
 .header{
   width: 100%;
   height: 90px;
@@ -170,12 +172,12 @@ button:hover{
   height: 100vh;
   left: 0;
   background: rgba(41, 41, 41, 0.6);
-  z-index: 1;
+  z-index: 50;
 }
 
 .header-links{
   display: flex;
-  z-index: 5;
+  z-index: 100;
   margin-right: 40px;
   gap: 36px;
   align-items: center;
@@ -328,8 +330,9 @@ button:hover{
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   margin-bottom: 60px;
-  max-width: 100%;
+  max-width: calc(100% - 80px);
 }
 .card{
   background-color: var(--color-light-s);
@@ -339,9 +342,6 @@ button:hover{
   margin-right: 45px;
   /* transform: translateX(300px); */
   transition: all 1s;
-}
-.card-hidden{
-  display: none;
 }
 .card:hover{
   box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
