--- a/shelter/style.css
+++ b/shelter/style.css
@@ -121,7 +121,7 @@ button:hover{
   border: none;
   border-radius: 15px;
   transition: background-color 0.2s;
-  z-index: 10;
+  z-index: 120;
 }
 .hamburger-icon{
   width: 30px;
@@ -334,6 +334,14 @@ button:hover{
   margin-bottom: 60px;
   max-width: calc(100% - 80px);
   transition: all 1s;
+}
+.pets-card-inner-container{
+  display: flex;
+}
+#disabled-button{
+  border: var(--color-dark-s) solid 2px;
+  color: var(--color-dark-s);
+  cursor: no-drop;
 }
 .card{
   background-color: var(--color-light-s);
